# kuma

./: .envrc  main.py  pyproject.toml
kuma/: gitlab.py  slack.py
kuma/scheme/: gitlab_hook.py
