[tool.poetry]
name = "kuma"
version = "0.1.0"
description = ""
authors = ["nuclearthinking <onifent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
slack-sdk = "^3.17.1"
aiohttp = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "no-name-in-module",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "no-member",
    "import-error"
]